k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cloud-conference-day-quarkus
  name: cloud-conference-day-quarkus
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: cloud-conference-day-quarkus
